addedd view bookings

--- a/carrentalsystem/crcapp/templates/home.html
+++ b/carrentalsystem/crcapp/templates/home.html
@@ -69,16 +69,10 @@
                             <hr>
                             <div class="col-md-12 row">
                                 <div class="col-md-4 boxes">
-                                        <a href="/management/booking/order">
-                                            <span class="text-center"><i class="fas fa-shopping-cart"></i></span>
-                                            Book Vehicles
-                                          </a>
-                                </div>
-                                <div class="col-md-4 boxes">
-                                        <a href="">
-                                            <span class="text-center"><i class="fas fa-search-plus"></i></span>
-                                            Inspections
-                                          </a>
+                                    <a href="{% url 'viewBooking' %}">
+                                        <span class="text-center"><i class="fas fa-eye"></i></span>
+                                        View Bookings
+                                    </a>
                                 </div>
                             </div>
                         </div>
