--- a/carrentalsystem/crcapp/templates/booking/viewBooking.html
+++ b/carrentalsystem/crcapp/templates/booking/viewBooking.html
@@ -16,8 +16,8 @@
               <tr>
                 <th>Order ID</th>
                 <th class="select-filter">Order Date</th>
-                <th class="select-filter">Pickup Date</th>
-                <th class="select-filter">Return Date</th>
+                <!-- <th class="select-filter">Pickup Date</th>
+                <th class="select-filter">Return Date</th> -->
                 <th class="select-filter">Customer</th>
                 <th class="select-filter">Serviced By</th>
                 <th class="select-filter">Pickup Store</th>
@@ -30,8 +30,8 @@
                     <tr>
                         <td class="pdttable">{{ order.orderID }}</td>
                         <td class="pdttable">{{ order.orderDate }}</td>
-                        <td class="pdttable">{{ order.pickupDate }}</td>
-                        <td class="pdttable">{{ order.returnDate }}</td>
+                        <!-- <td class="pdttable">{{ order.pickupDate }}</td>
+                        <td class="pdttable">{{ order.returnDate }}</td> -->
                         <td class="pdttable">{{ order.customerID }}</td>
                         <td class="pdttable">{{ order.employeeID }}</td>
                         <td class="pdttable">{{ order.pickupStoreID }}</td>
@@ -44,8 +44,8 @@
               <tr>
                 <th>Order ID</th>
                 <th>Order Date</th>
-                <th>Pickup Date</th>
-                <th>Return Date</th>
+                <!-- <th>Pickup Date</th>
+                <th>Return Date</th> -->
                 <th>Customer</th>
                 <th>Serviced By</th>
                 <th>Pickup Store</th>
