Fixed vehicle edit and delete

--- a/carrentalsystem/crcapp/templates/vehicle/create.html
+++ b/carrentalsystem/crcapp/templates/vehicle/create.html
@@ -197,7 +197,7 @@
 					<div class="col-md-6">
 						<div class="form-group">
 							<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-								<input type="number" name="wheelBase" class="form-control" id="wheelBase"
+								<input type="number" name="wheelbase" class="form-control" id="wheelBase"
 									placeholder="Wheel Base" required autocomplete="on" min=0 >
 								<div class="input-group-prepend">
 									<div class="input-group-text">mm</div>
