booking.html edited online with Bitbucket

--- a/carrentalsystem/crcapp/templates/public/booking.html
+++ b/carrentalsystem/crcapp/templates/public/booking.html
@@ -31,14 +31,15 @@
                         <h5>Select the vehicle from  {{ pickupStore.storeName }}</h5>
                         <div class="row">
                                 {% for item in vehicles %}
-                                <div class="col-md-2 items p-2 text-center">
+                                <div class="col-md-3 items p-2 text-center">
                                         <div class="item p-3">
                                                 <h5><small>Make:</small> {{ item.makeName | title  | truncatechars:15}}</h5>
                                                 <p><small>Model:</small> {{ item.model | title   | truncatechars:10}}</p>
                                                 <p><small>Series:</small> {{ item.series | title  | truncatechars:10 }}</p>
                                                 <p><small>Year:</small> {{ item.year }}</p>
+                                                 <a href="/vehicle/{{ item.vehicleID }}" target="_blank"> <p>View More Details</p></a>                                
                                                 <img src="static/images/carIcon.png" class="img-responsive img-center" width="50%">
-                                                <a href="/vehicle/{{ item.vehicleID }}"> <p class="btn btn-primary btn-sm">Add to order</p></a>
+                                                <input type="button" class="btn btn-primary btn-sm addOrderBtn" data-id="{{ item.vehicleID }}" value="Add to order" />
                                         </div> 
                                 </div>
                                 {% endfor %}
@@ -46,7 +47,7 @@
                         <h5>Recommendations</h5>
                         <div class="row">
                                 {% for item in reco %}
-                                <div class="col-md-2 items p-2 text-center">
+                                <div class="col-md-3 items p-2 text-center">
                                         <div class="item p-3">
                                                 <h5><small>Make:</small> {{ item.makeName | title  | truncatechars:15}}</h5>
                                                 <p><small>Model:</small> {{ item.model | title   | truncatechars:10}}</p>
@@ -62,4 +63,34 @@
         </div>
     </div>
   </section>
+  {% endblock %}
+  {% block scripts %}
+  <script>
+        $(document).ready(function() {
+            
+          
+
+           
+              
+        })
+
+
+        $(".addOrderBtn").click(function() {
+                var id = $(this).data("id");
+                var link = "/booking/vehicle/"+id; 
+                $(this).val("Adding...");
+                
+                $.ajax({
+                        url: link,
+                        type : 'POST',
+                        success: function(result){
+                        
+                            if(result == "True"){
+                                $(this).val("Added");
+                            }
+                            
+                        }});
+        })
+        
+  </script>
   {% endblock %}
